# gadk

./: .gitattributes  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
gadk/: cli.py  constants.py  elements.py  utils.py
tests/integration/: tests.sh
tests/integration/examples/abstract/: expected.yml
tests/integration/examples/abstract/workflows/: lib.py
tests/integration/examples/artifacts/: actions.py  expected.yml
tests/integration/examples/custom_step/: actions.py  expected.yml
tests/integration/examples/simple/: actions.py  expected.yml
tests/unit/: test_elements.py  test_utils.py
