[tool.poetry]
name = "gadk"
version = "0.3.0"
description = "Unofficial Github Actions Development Kit"
authors = ["Maarten Jacobs <maarten.j.jacobs@gmail.com>"]
readme = "README.md"
repository = "https://github.com/maartenJacobs/gadk"
license = "MIT"
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^5.4 || ^6.0"
click = "^7.1.2 || ^8.0.0"
colorama = "^0.4.3"  # Don't upgrade this further: maintain compatibility with old awscli

[tool.poetry.dev-dependencies]
black = "^22.10.0"
tox = "^3.27.1"
mypy = "^0.991"
pytest = "^7.2.0"
coverage = "^6.5.0"

[tool.poetry.scripts]
gadk = 'gadk.cli:cmd'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
